--- a/bike-upgrade-202104/index.html
+++ b/bike-upgrade-202104/index.html
@@ -145,6 +145,7 @@
 <p>WIP</p>
 <h3 id="jiao-huan-hou-1">交換後</h3>
 <p>最高。ビブなしでもお尻が痛くない革命的なサドル。</p>
+<p>上の写真はカーボンレール用の金具を忘れていったん R3 を取り付けてもらったもの。そのあと金具を持っていってゼロにしてもらった。</p>
 <h2 id="s-works-ares">S-WORKS ARES</h2>
 <p>WIP</p>
 <h3 id="jiao-huan-hou-2">交換後</h3>
