More about upgrade

--- a/bike-upgrade-202104/index.html
+++ b/bike-upgrade-202104/index.html
@@ -125,41 +125,86 @@
 <li><a href="https://sellesanmarco.it/en/negozio/approach-en-2/aspide-racing-wide-copia-2/">Selle San Marco Aspide Racing Wide</a> → <a href="https://www.fizik.com/rw_en/antares-versus-evo-00-adaptive.html">fizik ANTARES VERSUS EVO 00 ADAPTIVE</a></li>
 <li><a href="https://bike.shimano.com/ja-JP/product/apparel-accessories/s-phyre/SH-RC902.html">SHIMANO S-PHYRE RC9</a> → <a href="https://www.specialized-onlinestore.jp/shop/g/g61021-4341/">S-WORKS ARES</a></li>
 </ul>
+<p>パーツじゃないものもあるけど目をつむってほしい。</p>
 <span id="continue-reading"></span><h2 id="enve-ses-3-4">ENVE SES 3.4</h2>
-<p>交換前の <a href="https://imezi.jp/product/project167-dt40w-carbon-wheel-set/">imeZi 167</a> は納車時からのホイール。チューブレスレディの 40mm リム高でハブは DT350、オプションでラチェット歯数を 54T に変更している。最初におすすめされた DT Swiss の 1400 とか 1600 あたりはコスパ良かったけど、見た目が気に入らなかった。「ロゴが入ってないマットブラック」というリクエストに対して提案されたのが低価格の手組みカーボンホイールの imeZi 167 だった。見た目のために妥協はしないと決めていたのでこれにした。CHAPTER2 公式の写真にときどき出てくるホイールなんだけど、メーカー気になっていたので嬉しい提案だった。</p>
+<p>交換前の <a href="https://imezi.jp/product/project167-dt40w-carbon-wheel-set/">imeZi 167</a> は納車時のホイール。チューブレスレディ、リム高 40mm、ハブは DT Swiss の DT350、オプションでスターラチェットを 54T に変更している（SRAM XDR はフリーボディ交換必要）。パーツ選定時に最初におすすめされた DT Swiss の <a href="https://www.dtswiss.com/en/wheels/wheels-road/performance/pr-1600-spline">PR 1600 SPLINE</a> は鉄下駄ホイールからのアップグレードという意味でコスパ良かったんだけど、見た目が気に入らなかった。 <strong>「ロゴが入ってないマットブラック」</strong> というリクエストに対して、低価格の手組みカーボンホイールの <a href="https://imezi.jp/product/project167-dt40w-carbon-wheel-set/">imeZi 167</a> をおすすめしてもらった。<a href="https://imezi.jp/">imeZi（イメジィ）</a>ってあまり聞かないメーカーだけど、大手メーカーの OEM を請け負ってる工場で生産して、広告宣伝費にコストをかけないことで低価格を実現している（最近よくあるビジネスモデル）。<a href="https://www.limbocycling.com/">Limbo</a> のおすすめだし、<a href="https://www.chapter2bikes.com/">CHAPTER2</a> 公式の写真にも出てくるくらいなので品質に不安はなかった。</p>
+<p><img src="/img/imezi167.jpg" alt="imezi167" /></p>
 <h3 id="ke-ti">課題</h3>
-<p>交換前は他のカーボンホイールを体験したことがなかったので比較ができない状態だったけど、それでも imeZi のホイールは望み通りの見た目で（本当の希望は「デカールなし」だったけど、それはダメらしい）、1550g とまぁまぁ軽い部類だし、ホビーライダーには十分なスペックだった。</p>
-<p>ただ、今年 1 月に行ったブルベや、イズイチなどのロングライドをやる中で「リムハイト 40mm でも強風でハンドルを取られる」っていう問題が見えてきた。ロングライド以外でも路地を横切るとビル風が突風のように吹いてガッツリとハンドルを持っていかれる。かなり怖い思いをするので解決したい。</p>
-<p>もう 1 つは軽量化。高速巡航しない自分はホイール重量は影響大きいと思ってる。あとヒルクライムをやるようになって軽さをある程度重視したいというのもあった。いくつも山を超えるプロであれば、近年は差がつくのはダウンヒルらしく、結果として重量よりもエアロ性能らしい。自分はそういうレースには出ないつもりなので軽量化したい。</p>
+<p>初めてのカーボンホイールだったので比較による良し悪し判断はできなかったけど、imeZi 167 は望み通りの見た目（本当の希望は「デカールなし」だったけど、それはダメらしい）で、1550g とまぁまぁ軽い部類だし、ホビーライダーには十分すぎるスペックだった。</p>
+<p>ただ、今年 1 月に行った<a href="https://www.strava.com/activities/4590089267">ブルベ</a>や、<a href="https://www.strava.com/activities/4833149718">イズイチ</a>などのロングライドをする中で「リムハイト 40mm でも強風でハンドルを取られる」問題が見えてきた。ロングライド以外でも路地を横切るとビル風が突風のように吹いてガッツリとハンドルを持っていかれる。車道はちょっとしたハンドル操作ミスが命取りになるし解決したい。</p>
+<p>もう 1 つは軽量化。高速巡航なんてできないので自分にとってホイール重量は影響大きいと思ってる。あとヒルクライムをやるようになって軽さも気にするようになった。いくつもの山を超えるレースでは近年差がつくのはダウンヒルらしく、結果として重量よりもエアロ性能らしい。自分はそういうレースには出ないだろうから軽量化したい。</p>
 <h3 id="xuan-ding">選定</h3>
 <p>ホイールは目的別に極端にした方が良いだろうなって思って、「軽さ」と「横風対策」の両方を解決できそうなヒルクライム用のホイールのジャンルを探してみた。</p>
-<p>一番欲しかったのは Roval Alpinist CLX で リムハイト 33mm で 1248g。ただ、在庫がないようですぐに手に入りそうになかった。ネット通販で軽く見ただけで、お店に問い合わせたりはしてない。</p>
-<p>他だと Black Inc TWENTY、リムハイト 20mm で 1240g。見た目は超好みだしスペックも申し分ない。まぁいいお値段するのでどうしようかな、って感じ。</p>
-<p>そんな感じで悩んでいるとき Limbo さんに納車後初めてのメンテに行ったら、店内に ENVE がかかってる。ENVE 3.4 は現行ホイールよりも多少は軽量だし、フロントホイールは若干ハイトが低い。なにより ENVE は横風対策してるってのを何かで読んだ気がする。聞いてみたら値下げしようとしてると！もともと新品だと 40 万くらいするやつが 19 万。これは実質無料ってやつなので購入決定。その日は予約時間いっぱいになってしまったので取り付けは後日になった。</p>
+<p>一番欲しかったのは Roval Alpinist CLX で リムハイト 33mm で 1248g。ただ、在庫がないようですぐに手に入るか不明だった。店舗に在庫確認したらわりとある、みたいな可能性はありそう。</p>
+<p>他だと Black Inc TWENTY、リムハイト 20mm で 1240g。見た目は超好みだしスペックも申し分ない。まぁいいお値段するので一歩を踏み出せない感じ。</p>
+<p>そんな感じで悩んでいるとき Limbo さんに納車後初めてのメンテに行ったら、店内に ENVE がかかってる。ENVE 3.4 は現行ホイールよりも多少は軽量だし、フロントホイールは若干ハイトが低い。なにより ENVE は横風対策してるってのを何かで読んだ気がする。聞いてみたらなかなか売れないからそろそろ値下げしようとしてると！もともと新品だと 40 万くらいするやつが 19 万。これは実質無料ってやつなので購入決定。しかも「リムブレーキ使わないで！」のシールが貼ってあるから実質新品・・・？ その日は予約時間いっぱいになってしまったので取り付けは後日になった。</p>
 <h3 id="jiao-huan-hou">交換後</h3>
-<p>まず見た目が最高。カーボン繊維がうっすら見えていて、ほどよい光沢感のあるリムで、デカールも黒でうっすら見える程度。</p>
+<p>まず見た目が最高。カーボン繊維がうっすら見えていて、ほどよい光沢感のあるリムで、デカールも黒で角度によっては見える程度。</p>
 <p><img src="/img/enve-34.jpg" alt="enve-34" /></p>
-<p>Limbo からの帰り道である程度スピードも出して試してみたところかなり良い。ひと漕ぎ目の軽さが違うなというのが最初の印象。やっぱり 150g の差になると体感でわかるんだなぁと。DT240 へのアップグレードがどの程度効いてるのかはわからなかった。タイヤとの一体感、遊びがない感覚、カチッとしてるなーという印象。</p>
-<p>imeZi でも十分と思っていたけど、高いものは高いだけあるんだな、ってのがよくわかった。</p>
+<p>Limbo からの帰り道である程度スピードも出して試してみたところかなり良い。ひと漕ぎ目の軽さが違うなというのが最初の印象。150g の差でも体感に影響あるんだなぁと。だけど DT240 への変化は全然わからなかった。まぁベアリングは同じなので仕方ない（スターラチェットは 54T にした）。</p>
+<p>すごく感覚的な話だけど、タイヤやチューブとの一体感が増して、踏み込んだときの「遊び」がなく、力がダイレクトに伝わってる印象。自分がこんなインプレポエムを書くなんて夢にも思ってなかったけど、今は書き手の気持ちがちょっとわかった。</p>
+<p>結論、imeZi でも十分と思っていたけど、高いものは高いだけあるんだな、ってのがよくわかったしこのアップグレードはとても満足している。</p>
+<p>imeZi 167 のホイールはいったん Limbo にあずけているけど、委託販売するかスペアとして手元に置くかはちょっと考えてからにしようと思う。ENVE から戻すことはなさそう。</p>
 <h2 id="fizik-antares-versus-evo-00-adaptive">fizik ANTARES VERSUS EVO 00 ADAPTIVE</h2>
-<p>WIP</p>
-<h3 id="jiao-huan-hou-1">交換後</h3>
-<p>最高。ビブなしでもお尻が痛くない革命的なサドル。</p>
-<p>上の写真はカーボンレール用の金具を忘れていったん R3 を取り付けてもらったもの。そのあと金具を持っていってゼロにしてもらった。</p>
+<p><a href="https://sellesanmarco.it/en/negozio/approach-en-2/aspide-racing-wide-copia-2/">Selle San Marco Aspide Racing</a> は納車時からのもの。実は購入ではなく、同じく Limbo で CHAPTER2 を組んだ別のお客さんが貸し出し用に置いてってくれたものらしい。店主の高橋さんから「バイクを乗り換えるとあらゆるものが変わるから、サドルだけは同じ形状がいいよ」とアドバイスいただいて、だけどすぐ買い換えるとなると買うのはもったいないから・・・と貸し出してくれた。CHAPTER2 はコーポレートカラーがチェレステなので、サドルの色も合わせるってあたりもオーナーの人のこだわりがすごい。</p>
+<h3 id="ke-ti-1">課題</h3>
+<p>課題は「ビブなしでも快適に乗りたい」と「軽量化」の 2 つ。</p>
+<p>週末はしっかり正装でライドに行くけど、平日の始業前にコーヒー飲みに行くのにも CHAPTER2 を使っている。そのたびにビブショーツを履くのはさすがに面倒なので、スポーツ用の 7 分丈パンツを愛用している。そうなると問題になるのは「ケツが痛い」というやつ。サドルはビブを履く前提でレース寄りの軽いやつだし、そもそもで言えば街乗りに使うなって話なんだけど、それでも諦められない。</p>
+<p>以前 GCN Japan の YouTube 動画で土井ちゃんが ADAPTIVE を使っていて、街乗りでもビブなしで快適！ってのを聞いてずっと興味はあったけど、色がアレなので見合わせていたけど、ブラックも発売となったので再検討という感じ。</p>
+<p>軽量化は繰り返しになるけどヒルクライムのため。小さいサドルバッグを付けてるときと付けてないときではダンシングしたときの軽快さが全然違うので、ちょっとでも軽くしておきたいという気持ち。</p>
+<h3 id="xuan-ding-1">選定</h3>
+<p>両方の課題を解決するとなるとあまり選択肢はなかった。</p>
+<ul>
+<li><a href="https://www.fizik.com/rw_en/antares-versus-evo-00-adaptive.html">fizik ANTARES VERSUS EVO 00 ADAPTIVE</a> (139mm / 147g)</li>
+<li><a href="https://www.fizik.com/rw_en/antares-versus-evo-r1-adaptive.html">fizik ANTARES VERSUS EVO R1 ADAPTIVE</a> (139mm / 174g)</li>
+<li><a href="https://www.specialized.com/us/en/s-works-power-with-mirror/p/184353">S-WORKS POWER with MIRROR</a> (143mm / 190g)</li>
+</ul>
+<p>現行のサンマルコが実は 177.9g とかなり軽量ということが判明したのと、自分はライド中にお尻の位置をちょくちょく変えるのでショートノーズにしちゃうと根本的に乗り方を変える必要があるので S-WORKS は選択肢から外した。</p>
+<p>00 と R1 はシェルがフルカーボンかカーボン＋ナイロン樹脂という違い。R1 と R3 はカーボンレールか金属レールという違い。</p>
+<p>テストサドルの取り付けで<a href="http://www.nalsimafrend.jp">なるしまフレンドさん</a>によると、00 はシェルが硬すぎると感じる人もいるみたいで R1 を選ぶケースもあるとのこと。話を聞いたメカニックの人が試した感じだと R1 と 00 で言うほど硬さの違いは気にならなかったようで、どう感じるかは人それぞれみたい。</p>
+<h3 id="tesutosadoru">テストサドル</h3>
+<p>ADAPTIVE はまだ購入していない。fizik のサドルは初めてなので、さすがにいつもみたいにエイヤで買うことはせず、<a href="https://www.riogrande.co.jp/news/node/76354">テストサドル</a>をすることにした。カワシマサイクルサプライさんはとても丁寧な対応で、結局予定日より 2 日も早く受け取ることができた。</p>
+<p>で、取り付け当日、カーボンレールってことを忘れて専用金具を持っていかなかったにも関わらず、「せっかく来てもらったし」ということで 00 の代わりに R3 を取り付けてもらった（完全に自分のミスなのに柔軟な対応に感謝しかない）。ブラックカラーなのでめっちゃかっこいい。そのサドルでいったん自宅まで数キロビブショーツなしで走ってみて本当に感動した。さらにそのあと Limbo 往復で 40km ほどビブショーツありで走ってみて、これまでにない極上の乗り心地で最高オブ最高だった。これは革命的だ。</p>
+<p><img src="/img/adaptive-r3.jpg" alt="adaptive-r3" /></p>
+<p>ちゃんとカーボンレール取り付け用の金具を持参して今度こそってことで 00 を取り付けてもらった。自宅までの短い距離だったけど、乗り心地は R3 ともちろん変わらず最高。形状は R3 と同じということだったけど、前乗りしたときの感覚が微妙に違ってて、これは単純に取り付け角度がわずかに違っているだけかもしれない。そこは微調整して試す。</p>
+<p>まだ試した距離がわずかなのでもうちょっと乗ってから感想を追記する。それでも 00 のブラックカラーで購入確定だと思う。</p>
+<p><img src="/img/adaptive-00-01.jpg" alt="adaptive-00-01" /></p>
+<p>内部の格子の太さを場所に応じて変化させて、それによって硬さの違いを生み出している。</p>
+<p><img src="/img/adaptive-00-02.jpg" alt="adaptive-00-02" /></p>
+<p>カーボンレールが美しい。R1 もカーボンレールだけど形状は異なっている。</p>
 <h2 id="s-works-ares">S-WORKS ARES</h2>
-<p>WIP</p>
-<h3 id="jiao-huan-hou-2">交換後</h3>
-<p>最高。自分の足に合ったシューズってこういうやつか！ってなった。あと ENVE と同じで遊びがなくて、どんなふうに漕いでも足がペダルと一体となった感覚が失われない。</p>
+<p>両面キャッチできる SPEEDPLAY を知ってビンディングデビューで買った SHIMANO S-PHYRE RC9 を半年ほど使っていた。いろんなメーカーのいろんなモデルをサイズ変えながら 10 足くらいためし履きして選んだシューズ。サイズ 43 で実測 249.8g。</p>
+<h3 id="ke-ti-2">課題</h3>
+<p>100km を越えたあたりから（BOA の締め方によっては 50km 程度でも）、右足小指の外側の骨が当たって痛くなる問題と、足が中で動かないように BOA を締めると親指の先あたりが痛くなる問題（ちなみにつま先の余裕はありすぎな状態）をなんとかしたかった。ついでに言えばソックスによっては BOA クロージャーによる締付けでタン部分が痛くなることもあった。</p>
+<p>特別珍しい足の形というわけではないんだけど、ちょっと骨が出っ張っていたりする部分に合わせてシューズのサイズは少し大きめにしていた。結果としてそれを補うために少し強めに BOA を締めないといけないという面倒な状態。</p>
+<h3 id="xuan-ding-2">選定</h3>
+<ul>
+<li><a href="https://www.fizik.com/eu_en/vento-stabilita-carbon.html">fizik VENTO STABILITA CARBON</a> (Size 42 / 227g)</li>
+<li><a href="https://www.fizik.com/eu_en/vento-powerstrap-r2-aeroweave-road-bike-cycling-shoes.html">fizik VENTO POWERSTRAP R2 AEROWEAVE</a> (Size 42 / 205g)</li>
+<li><a href="https://shop.kirschberg.co.jp/?pid=114013388">LAKE CX332</a> (Size 42 / 230g)</li>
+<li><a href="https://www.specialized-onlinestore.jp/shop/g/g61021-4341/">S-WORKS ARES</a> (Size 42 / 220g)</li>
+</ul>
+<p>RC9 購入時にいろいろためし履きしたとき、fizik のメッシュタイプのモデルであれば生地の伸縮性によって 1 サイズ落とすことができてつま先の余りが最小限になる、ということはわかっていた。なので fizik は早い段階から検討候補だった。</p>
+<p>LAKE はカンガルーレザーによって経年変化で馴染んでいくという特徴と、熱処理で自分の足にフィットさせることができるというメリットもあり最有力候補だった。ただ、デザインの方向性が自分の好みではなく、あまりテンションが上がらない。ということで他を試してどうしてもダメだったらってときの最終手段にしておくことにした。</p>
+<p>S-WORKS ARES はソックスタイプの構造が特徴。NIKE のスニーカーで Presto というモデルがあって、初めて履いたときにびっくりするくらいフィット感が高かったので、構造的に正解なんじゃないか・・・ということで候補にした。あと検討のタイミングで、知り合いが S-WORKS 7 を履いていておすすめ、というのも聞いたので、とりあえず SPECIALIZED のコンセプトストアに行ってためし履きしてみることにした。</p>
+<p>SPECIALIZED 新宿店に行ってみると Google マップのレビューの荒れ方に反して丁寧な接客で拍子抜けした。店内に自転車置場があるので、近づくとすぐに気付いてドアを開けてくれて、「CHAPTER2 いいっすねー！」って感じでとてもフレンドリー。すでに履いている SHIMANO が 43 サイズなので、それをベースに探っていきましょうってことでためし履きをする。</p>
+<p>最初に履いた印象としては宣伝通りホールド感があり、フィット感も高い。無理にクロージャーで締めなくても最初からホールド感がある。42.5 か 43 かでめちゃくちゃ悩んでいると、つま先の余り具合を見てくれて、トータルで見ると 42.5 がベスト。ただ、ほんのわずかにかかと部分が窮屈な感じがして、それを伝えると、かかとやくるぶし部分の素材は微妙に伸びる素材らしく、徐々に馴染んでいくとのことだった。SHIMANO では大きめを選んで失敗したので今回はジャストサイズにしてみようということで 42.5 にした。</p>
+<p>なお、途中から完全に ARES を買うことになっていたのはオールホワイトに一目惚れしたため。</p>
+<p><img src="/img/s-works-ares.jpg" alt="s-works-ares" /></p>
+<h3 id="jiao-huan-hou-1">交換後</h3>
+<p>最高。自分の足に合ったシューズってこういうやつか！ってなった。あと ENVE と同じでペダリング時の遊びがなくて、どんなふうに漕いでも足がペダルと一体となった感覚が失われない。BOA クロージャーをキツく締めなくてもホールド感があってフィット感が高い。</p>
+<p>とりあえず 50km くらい走ってみてまったく足の痛みはなかった。これは優勝っぽい。100km 超えのロングライドをしないとわからない部分はあるけど、以前は 50km 以下でも足に違和感があったし、なんなら玄関で履いた瞬間から痛みはないものの、わずかに当たってる感覚があり（購入時には気付いてなかった）、それだけでも大きな差がある。</p>
 <h2 id="jin-hou-noyu-ding">今後の予定</h2>
 <ul>
 <li>ハブ交換
 <ul>
-<li>DT Swiss DT180 EXP（DT240 の赤が嫌なのと、軽量化）</li>
+<li>DT Swiss DT180 EXP（DT240 の赤が邪魔すぎる、あとセラミックベアリング、そして軽量化）</li>
 </ul>
 </li>
 <li>ハンドルバー交換
 <ul>
-<li>ENVE AERO HANDLEBAR（かっこいい、軽い）</li>
+<li>ENVE AERO HANDLEBAR（かっこいい、あんま軽くない）</li>
+<li>ENVE HANDLEBAR（軽い、見た目はそこまで惹かれない）</li>
 <li>DEDA VINCI（かっこいい、軽くはない）</li>
 </ul>
 </li>
@@ -167,6 +212,7 @@
 <li>コンポをすべて Red 化（ちょい軽くなる）
 <ul>
 <li>現状はチェーンリングとクランクだけ Red（見た目の好みにより）</li>
+<li>でもスプロケは現状のブラックが気に入ってる</li>
 </ul>
 </li>
 </ul>
