--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 <li><a href="https://sellesanmarco.it/en/negozio/approach-en-2/aspide-racing-wide-copia-2/">Selle San Marco Aspide Racing Wide</a> → <a href="https://www.fizik.com/rw_en/antares-versus-evo-00-adaptive.html">fizik ANTARES VERSUS EVO 00 ADAPTIVE</a></li>
 <li><a href="https://bike.shimano.com/ja-JP/product/apparel-accessories/s-phyre/SH-RC902.html">SHIMANO S-PHYRE RC9</a> → <a href="https://www.specialized-onlinestore.jp/shop/g/g61021-4341/">S-WORKS ARES</a></li>
 </ul>
+<p>パーツじゃないものもあるけど目をつむってほしい。</p>
 
                                     </div>
                                     <div class="read-more">
