--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                                     <div class="post__summary">
                                         <h2 id="atupuguredonei-rong">アップグレード内容</h2>
 <ul>
-<li><a href="https://imezi.jp/product/project167-dt40w-carbon-wheel-set/">imeZi 167 TLR 40mm/DT350 54T</a> → <a href="https://www.enve.com/product/ses-3-4/">ENVE SES 3.4</a></li>
-<li><a href="https://sellesanmarco.it/en/negozio/approach-en-2/aspide-racing-wide-copia-2/">Selle San Marco Aspide Racing Wide</a> → <a href="https://www.fizik.com/rw_en/antares-versus-evo-00-adaptive.html">fizik ANTARES VERSUS EVO 00 ADAPTIVE</a></li>
-<li><a href="https://bike.shimano.com/ja-JP/product/apparel-accessories/s-phyre/SH-RC902.html">SHIMANO S-PHYRE RC9</a> → <a href="https://www.specialized-onlinestore.jp/shop/g/g61021-4341/">S-WORKS ARES</a></li>
+<li><a href="https://imezi.jp/product/project167-dbcl40w-carbon-wheel-set/">imeZi 167</a> → <strong><a href="https://www.enve.com/product/ses-3-4/">ENVE SES 3.4</a></strong></li>
+<li><a href="https://sellesanmarco.it/en/negozio/approach-en-2/aspide-racing-wide-copia-2/">Selle San Marco Aspide Racing</a> → <strong><a href="https://www.fizik.com/rw_en/antares-versus-evo-00-adaptive.html">fizik ANTARES VERSUS EVO 00 ADAPTIVE</a></strong></li>
+<li><a href="https://bike.shimano.com/ja-JP/product/apparel-accessories/s-phyre/SH-RC902.html">SHIMANO S-PHYRE RC9</a> → <strong><a href="https://www.specialized-onlinestore.jp/shop/g/g61021-4341/">S-WORKS ARES</a></strong></li>
 </ul>
 <p>パーツじゃないものもあるけど目をつむってほしい。</p>
 
