--- a/hanno-ride/index.html
+++ b/hanno-ride/index.html
@@ -142,6 +142,10 @@
 <p><img src="/img/hanno-oono.png" alt="hanno-oono" /></p>
 <p>同じく<a href="https://www.pref.saitama.lg.jp/b0904/tukoseigen/index.html">森林管理道（林道）の通行制限情報（秩父農林振興センター管内）</a>の「丸山線」を見てみるとたしかに通行止め。</p>
 <p>ただ、登山者がロープくぐって通行していたのは謎だった。</p>
+<h2 id="shou-chang-ban-sang-karazheng-wan-sang-nihaxing-keru">狩場坂峠から正丸峠には行ける</h2>
+<p>狩場坂峠から正丸峠に向かう道は大丈夫だった。</p>
+<p><img src="/img/hanno-kariba.png" alt="hanno-kariba" /></p>
+<p>ただ、うろちょろしてたら予定よりも大幅に時間をロスしていて、昼食も取れていない状況ということもあり、秩父に抜けるのは断念した。</p>
 <h2 id="fan-neng-karazhi-fu-niba-kerunoha">飯能から秩父に抜けるのは？</h2>
 <p>飯能駅から鎌北湖、または武蔵横手駅あたりから奥武蔵グリーンラインにアプローチし、顔振峠を通って狩場坂峠に向かい、正丸峠経由で 299 号線に入って秩父に降りる。</p>
 
